@@ -1,3 +1,7 @@
+2018-12-23  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* sample/glfwmaster_build_dylib.sh: Added.
+
 2018-12-22  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated using latest gl.xml.
